# qml-verification-lab

./: .gitignore  BACKENDS.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/toy_noise_identifiability/run_20260101_053241_4d12f072/: config.resolved.json  env.json  results.jsonl  summary.json
artifacts/toy_noise_identifiability/run_20260101_053242_fe84fe97/: config.resolved.json  env.json  results.jsonl  summary.json
artifacts/toy_noise_identifiability/run_20260101_053243_c7bf7279/: config.resolved.json  env.json  results.jsonl  summary.json
artifacts/toy_noise_identifiability/run_20260101_053244_1262814a/: config.resolved.json  env.json  results.jsonl  summary.json
artifacts/toy_noise_identifiability/run_20260101_053244_e30ff178/: config.resolved.json  env.json  results.jsonl  summary.json
artifacts/toy_noise_identifiability/run_20260101_053245_4d00cb9b/: config.resolved.json  env.json  results.jsonl  summary.json
batteries/: README.md  canonical_battery.yaml
examples/: deterministic_smoke.yaml  metric_registry_demo.py  toy_identifiability_collapse.yaml  toy_smoke.yaml  toy_sweep_small.yaml  vqc_smoke.yaml  vqc_sweep_small.yaml
scripts/: generate_demo_artifacts.sh  generate_hero.py  run_canonical_battery.py
src/qvl/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  plotting.py  reporting.py  runner.py
src/qvl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py  test_metric_registry.py  test_metrics.py  test_pennylane.py  test_reporting.py  test_smoke_cli.py
(+544 files in other folders)
