[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qvl"
version = "0.1.0"
description = "Quantum Machine Learning Verification Laboratory"
authors = [{name = "Christopher Altman"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "tqdm>=4.60.0",
]
pennylane = [
    "pennylane>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
